k8s-deployment/k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: training-app-ingress
  namespace: training-app
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
        - path: /api
          pathType: Prefix
          backend:
            service:
              name: backend
              port:
                number: 8080
        - path: /
          pathType: Prefix
          backend:
            service:
              name: frontend
              port:
                number: 5173
